# api/docs/swagger.yaml
@@ -241,6 +241,21 @@ definitions:
     - email
     - password
     type: object
+  SignUpTokenBody:
+    properties:
+      password:
+        maxLength: 255
+        minLength: 8
+        type: string
+      timezone:
+        type: string
+      token:
+        type: string
+    required:
+    - password
+    - timezone
+    - token
+    type: object
   UpdateProjectTeamBody:
     properties:
       emoji:
@@ -276,6 +291,12 @@ definitions:
       referrer:
         type: string
         x-nullable: true
+      stripe_customer_id:
+        type: string
+        x-nullable: true
+      stripe_subscription_id:
+        type: string
+        x-nullable: true
       updated_at:
         type: string
         x-nullable: true
@@ -291,17 +312,19 @@ definitions:
     - id
     - name
     - referrer
+    - stripe_customer_id
+    - stripe_subscription_id
     - updated_at
     - verified_at
     type: object
-  healthhandler.HealthResponse:
+  health.HealthResponse:
     properties:
       postgres_ping:
         type: string
       redis_ping:
         type: string
     type: object
-  projectteamhandler.CreateProjectTeamBody:
+  projectteam.CreateProjectTeamBody:
     properties:
       emoji:
         type: string
@@ -422,6 +445,36 @@ paths:
         user is authenticated (e.g. you fetch get-session in your middleware)
       tags:
       - auth
+  /auth/token/sign-up:
+    post:
+      consumes:
+      - application/json
+      operationId: sign-up-token
+      parameters:
+      - description: Sign up token body
+        in: body
+        name: sign_up_token_body
+        required: true
+        schema:
+          $ref: '#/definitions/SignUpTokenBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Session'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ASError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ASError'
+      summary: signs up user by token
+      tags:
+      - auth
   /health:
     get:
       operationId: get-health
@@ -429,7 +482,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/healthhandler.HealthResponse'
+            $ref: '#/definitions/health.HealthResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -492,79 +545,6 @@ paths:
       summary: get project
       tags:
       - project
-  /projects/{project_slug}/teams:
-    get:
-      consumes:
-      - application/json
-      operationId: get-project-teams
-      parameters:
-      - description: Project slug
-        in: path
-        name: project_slug
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/ProjectTeam'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/ASError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/ASError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/ASError'
-      summary: get project teams
-      tags:
-      - projectteam
-    post:
-      consumes:
-      - application/json
-      operationId: create-project-team
-      parameters:
-      - description: Create project team body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/projectteamhandler.CreateProjectTeamBody'
-      - description: Project slug
-        in: path
-        name: project_slug
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ProjectTeam'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/ASError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/ASError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/ASError'
-      summary: create project team
-      tags:
-      - projectteam
   /projects/{project_slug}/teams/{id}:
     put:
       consumes:
@@ -604,7 +584,111 @@ paths:
       summary: update project team
       tags:
       - projectteam
-  /projects/{project_slug}/teams/{team_slug}:
+  /projects/{project_slug}/teams/{team_slug}/memberships/{id}:
+    delete:
+      operationId: delete-project-team-membership
+      parameters:
+      - description: Project team membership ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ProjectTeamMembership'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/ASError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ASError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ASError'
+      summary: Delete project team membership
+      tags:
+      - ProjectTeamMembership
+  /projects/{projectSlug}/teams:
+    get:
+      consumes:
+      - application/json
+      operationId: get-project-teams
+      parameters:
+      - description: Project slug
+        in: path
+        name: projectSlug
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/ProjectTeam'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/ASError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ASError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ASError'
+      summary: get project teams
+      tags:
+      - projectteam
+    post:
+      consumes:
+      - application/json
+      operationId: create-project-team
+      parameters:
+      - description: Create project team body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/projectteam.CreateProjectTeamBody'
+      - description: Project slug
+        in: path
+        name: projectSlug
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ProjectTeam'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/ASError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ASError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ASError'
+      summary: create project team
+      tags:
+      - projectteam
+  /projects/{projectSlug}/teams/{teamSlug}:
     get:
       consumes:
       - application/json
@@ -612,12 +696,12 @@ paths:
       parameters:
       - description: Project slug
         in: path
-        name: project_slug
+        name: projectSlug
         required: true
         type: string
       - description: Team slug
         in: path
-        name: team_slug
+        name: teamSlug
         required: true
         type: string
       produces:
@@ -642,7 +726,7 @@ paths:
       summary: get project team
       tags:
       - projectteam
-  /projects/{project_slug}/teams/{team_slug}/memberships:
+  /projects/{projectSlug}/teams/{teamSlug}/memberships:
     get:
       consumes:
       - application/json
@@ -650,12 +734,12 @@ paths:
       parameters:
       - description: Project slug
         in: path
-        name: project_slug
+        name: projectSlug
         required: true
         type: string
       - description: Team slug
         in: path
-        name: team_slug
+        name: teamSlug
         required: true
         type: string
       produces:
@@ -695,12 +779,12 @@ paths:
           $ref: '#/definitions/CreateProjectTeamMembershipBody'
       - description: Project slug
         in: path
-        name: project_slug
+        name: projectSlug
         required: true
         type: string
       - description: Team slug
         in: path
-        name: team_slug
+        name: teamSlug
         required: true
         type: string
       produces:
@@ -725,37 +809,6 @@ paths:
       summary: create project team membership
       tags:
       - projectteammembership
-  /projects/{project_slug}/teams/{team_slug}/memberships/{id}:
-    delete:
-      operationId: delete-project-team-membership
-      parameters:
-      - description: Project team membership ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ProjectTeamMembership'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/ASError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/ASError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/ASError'
-      summary: Delete project team membership
-      tags:
-      - ProjectTeamMembership
   /users:
     get:
       consumes:
@@ -783,7 +836,7 @@ paths:
       summary: get user
       tags:
       - user
-  /users/{user_id}/projects:
+  /users/{userId}/projects:
     get:
       consumes:
       - application/json
@@ -791,7 +844,7 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: user_id
+        name: userId
         required: true
         type: string
       - in: query
@@ -819,7 +872,7 @@ paths:
       summary: get user projects
       tags:
       - user
-  /users/{user_id}/projects/{project_slug}/memberships/{team_slug}:
+  /users/{userId}/projects/{projectSlug}/memberships/{teamSlug}:
     get:
       consumes:
       - application/json
@@ -827,17 +880,17 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: user_id
+        name: userId
         required: true
         type: string
       - description: Team slug
         in: path
-        name: team_slug
+        name: teamSlug
         required: true
         type: string
       - description: Project slug
         in: path
-        name: project_slug
+        name: projectSlug
         required: true
         type: string
       produces:
